--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "framer-motion": "^10.5.0",
     "react": "^18.2.0",
