--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.4.0",
     "nodemon": "^2.0.21",
